deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment
  labels:
    app: demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: nginx
        image: docker.io/techwithprerit/k8s-hindi-app1:1.2-major
        resources:
          limits:
            memory: "300Mi"
            cpu: "600m"
          requests:
            memory: "250Mi"
            cpu: "20m"
