ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo
spec:
  tls:
  - hosts:
    - dev.cloudwithankit.in
    secretName: tls-cert
  ingressClassName: nginx
  rules:
  - host: "dev.cloudwithankit.in"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo
            port:
              number: 8080
